# libkrimes

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.kdc  README.md  clippy.toml  krb5.conf
.github/workflows/: clippy.yml
examples/: krb5.keytab  krb5.keytab.with_holes  krime.conf  krimedc.rs
examples/mitkdc/: 0001-Fix-debug-build.patch  0002-Debug-klist-file-ccache.patch  0003-Debug-ticket-flags.patch  0004-Debug-keyring-ccache.patch  Dockerfile  docker-compose.yml  entrypoint.sh  kadm5.acl  kadm5.dict  krb5.conf  provision.sh
examples/samba/: Dockerfile.dnsmasq  Dockerfile.kdc  Dockerfile.krimedc  Dockerfile.samba  compose.yml  dnsmasq-hosts.conf  dnsmasq.conf  docker-compose.yml  entrypoint.dnsmasq  entrypoint.krimedc  entrypoint.samba  fun.sh  krb5.conf  krbtgt.keytab  krime.conf  smb.conf  win-2-krimedc.keytab  win-2-krimedc.pcapng  win-2-w2k22.keytab  win-2-w2k22.pcapng
kdc/: Cargo.toml
kdc/src/: cldap.rs  config.rs  main.rs
kdc_test/: kdc.conf  krb5.conf  provision.sh
ktool/: Cargo.toml
ktool/src/: ccache.rs  config.rs  main.rs  opt.rs
libkrimes/: Cargo.toml
libkrimes/src/: cksum.rs  cldap.rs  constants.rs  crypto.rs  error.rs  lib.rs
libkrimes/src/asn1/: ap_options.rs  ap_req.rs  authenticator.rs  checksum.rs  enc_kdc_rep_part.rs  etype_info2.rs  kerberos_flags.rs  kerberos_time.rs  krb_error.rs  krb_kdc_req.rs  microseconds.rs  mod.rs  principal_name.rs  tagged_enc_kdc_rep_part.rs  ticket_flags.rs
libkrimes/src/asn1/constants/: encryption_types.rs  errors.rs
libkrimes/src/ccache/: cc_dir.rs  cc_file.rs  cc_keyring.rs  mod.rs
libkrimes/src/client/: conf.rs  krb5.pest
libkrimes/src/keytab/: kt_file.rs
libkrimes/src/proto/: as_rep.rs  as_req.rs  mod.rs  reply.rs  request.rs  time.rs
libkrimes/src/proto/reply/: as_rep.rs  error_rep.rs  mod.rs  tgs_rep.rs
libkrimes/src/proto/request/: as_req.rs  mod.rs  tgs_req.rs
samples/: ccache  k5.EXAMPLE.COM.stash  keytab
samples/mit_as_tgs/: as_tgs.pcapng  krb5.keytab  krb5cc_1000
src/: cc_keyring.rs  ccache.rs  constants.rs  crypto.rs  error.rs  keytab.rs  lib.rs  proto.rs
src/asn1/: ap_options.rs  ap_req.rs  authenticator.rs  authorization_data.rs  enc_kdc_rep_part.rs  enc_ticket_part.rs  encrypted_data.rs  encryption_key.rs  etype_info2.rs  host_address.rs  host_addresses.rs  kdc_options.rs  kdc_rep.rs  kdc_req.rs  kdc_req_body.rs  kerberos_flags.rs  kerberos_string.rs  krb_error.rs  krb_kdc_rep.rs  krb_kdc_req.rs  last_req.rs  mod.rs  pa_data.rs  pa_enc_ts_enc.rs  principal_name.rs  realm.rs  tagged_enc_kdc_rep_part.rs  tagged_ticket.rs  ticket_flags.rs  transited_encoding.rs
src/asn1/constants/: authorization_data_types.rs  encryption_types.rs  errors.rs  message_types.rs  mod.rs  pa_data_types.rs  princ_name_types.rs
src/ccache/: cc_file.rs  cc_keyring.rs  mod.rs
src/keytab/: kt_file.rs  mod.rs
src/proto/: mod.rs  ms_pac.rs  reply.rs  request.rs  time.rs
