[workspace]
resolver = "3"
members = ["libkrimes", "kdc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.81"
license = "MPL-2.0"
homepage = "https://github.com/Firstyear/libkrimes"
repository = "https://github.com/Firstyear/libkrimes"

[workspace.dependencies]
libkrimes = { path = "./libkrimes", version = "=0.1.0" }

aes = "0.8.4"
assert_hex = "0.4.1"
base64 = "0.22.0"
bitflags = { version = "2.9.1" }
bitmask-enum = "2.2.5"
binrw = "0.15.0"
bytes = { version = "^1.11.1" }
cbc = "0.1.2"
clap = { version = "4.5.8" }
c-types = { version = "6.0.0" }
der = { version = "0.8.0-rc.9" }
errno = { version = "0.3.11" }
futures = "^0.3.21"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
keyutils = { version = "0.4.0" }
keyutils-raw = { version="0.4.0" }
libc = { version = "0.2.162" }
ldap3_proto = { version = "0.6.2" }
num_enum = { version = "^0.7.3" }
md5 = "0.8.0"
pbkdf2 = "0.12.2"
rand = "0.9.0"
serde = { version = "^1.0.204", features = ["derive"] }
serde-binary = { version = "0.5.0" }
sha1 = "0.10.6"
tempfile = "3.19.1"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tokio = { version = "1", features = [
  "macros",
  "rt",
  "net",
  "io-util",
  "signal",
] }
tokio-util = { version = "^0.7.1", features = ["codec", "net"] }
tokio-stream = { version = "0.1.17" }
toml = { version = "^0.9.2" }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
uzers = "0.12.1"
which = "8.0.0"
