[package]
name = "krimedc"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
libkrimes = { workspace = true }
clap = { version = "^4.5", features = ["derive", "env"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = "^0.9.2"
serde = { version = "^1.0.204", features = ["derive"] }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
