[package]
name = "krimedc"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
description = "A KDC based on libkrimes"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
errno = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
libkrimes = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
