[package]
name = "libkrimes"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
keyring = ["dep:keyutils"]

[dependencies]
bytes = "^1.1.0"

num_enum = "^0.7.3"
tokio = { workspace = true }
tokio-util = { workspace = true }

tracing = { workspace = true }

# der = { version = "0.7.9", features = ["alloc", "derive"] }
der = { version = "0.8.0-rc.2", features = [
  "alloc",
  "derive",
  "flagset",
  "std",
] }

# Cryptographic Libraries from the rust-crypto project
aes = "0.8.4"
cbc = "0.1.2"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
md5 = "0.8.0"

rand = "0.9.0"
sha1 = "0.10.6"
binrw = "0.15.0"

assert_hex = "0.4.1"
uzers = "0.12.1"

libc = { workspace = true }
errno = { workspace = true }

keyutils = { version = "0.4.0", optional = true }
bitmask-enum = "2.2.5"
hex = { workspace = true }

ldap3_proto = { version = "0.6.2" }
futures-util = { version = "0.3.31" }
serde = { workspace = true }
serde-binary = { version = "0.5.0" }
bitflags = { version = "2.9.1" }
c-types = { version = "5.0.0" }
uuid = { workspace = true }

[dev-dependencies]
base64 = "0.22.0"
clap = { version = "^4.5.8", features = ["derive"] }
tempfile = "3.19.1"
which = "8.0.0"
tracing-subscriber = { workspace = true }
futures = { workspace = true }
