[package]
name = "libkrimes"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

description = "A pure rust, minimal kerberos library"

[features]
keyring = ["dep:keyutils", "dep:keyutils-raw"]

[dependencies]
aes = { workspace = true }
assert_hex = { workspace = true }
binrw = { workspace = true }
bitflags = { workspace = true }
bitmask-enum = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
c-types = { workspace = true }
der = { workspace = true, features = [
  "alloc",
  "derive",
  "flagset",
  "std",
] }
errno = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
hex = { workspace = true }
hmac = { workspace = true }
keyutils = { workspace = true, optional = true }
keyutils-raw = { workspace = true, optional = true }
ldap3_proto = { workspace = true }
libc = { workspace = true }
md5 = { workspace = true }
num_enum = { workspace = true }
pbkdf2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-binary = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
uzers = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
